--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=${PORT}
 spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=dev
