--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT}
+server.port=8081
 spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=dev
@@ -12,3 +12,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#management.endpoints.health.show.details=always
+#management.endpoints.web.exposure.include=*
+#
+#management.metrics.enable.jvm=true
+#management.metrics.export.prometheus.enabled=true
+#management.metrics.distribution.sla.http.server.requests=50ms,100ms,200ms,300ms,500ms,ls
+#management.metrics.tags.application=produtos-service
+#
+#
+#spring.sleuth.sampler.probability=1.0
+#spring.application.name=produtos-service
+#spring.zipkin.baseUrl=http://localhost:9411
